# aprilgrid

./: .gitignore  CMakeLists.txt  test.cpp
apriltags/include/apriltags/: Edge.h  FloatImage.h  GLine2D.h  GLineSegment2D.h  Gaussian.h  GrayModel.h  Gridder.h  Homography33.h  MathUtil.h  Quad.h  Segment.h  TagDetection.h  TagDetector.h  TagFamily.h  UnionFindSimple.h  XYWeight.h  gridDetector.hpp
apriltags/src/: Edge.cc  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc  UnionFindSimple.cc  gridDetector.cpp
trash/aprilgrid/aprilgrid/: detector.hpp
trash/aprilgrid/src/: detector.cpp
trash/example/: apriltags_demo.cpp
